# cooking_api

./: .env.template  .gitignore  pyproject.toml
.github/workflows/: .github-ci.yaml
homework/: pyproject.toml  ttest_api.py
homework/cook_app/: cookbook.db  database.py  main.py  models.py  schemas.py
homework/tests/: conftest.py  test.db  test_db_operations.py
src/: docker-compose.yaml  main.py
src/api/: __init__.py
src/api/api_v1/: __init__.py  ingredients.py  main_page.py  recipes.py
src/core/: config.py
src/core/models/: __init__.py  base.py  db_helper.py  ingredient.py  ingredient_in_recipe.py  recipe.py
src/core/schemas/: ingredient.py  main_page.py  recipe.py
src/crud/: ingredients.py  recipes.py
test/: test_sum_two.py
tests/: __init__.py  conftest.py  test.db  test_api_routes.py
