[tool.poetry]
#description
name = "cooking_book"
version = "0.1.0"
description = "my description"
authors = ["Tatpitch"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
pydantic = {extras = ["email"], version = "^2.10.3"}
pydantic-settings = "^2.6.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.1"
aiosqlite = "^0.20.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.14.1"
types-flask = "^1.1.6"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio_mode="auto"

[tool.black]
line-length = 79

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "skip"

